<resources>
    <string name="app_name">CekWarteg</string>
    <string name="app_version">v 1.0.0</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="name_headline">Ready for looking perfect Warteg?</string>
    <string name="get_started">Find Warteg Now!</string>
    <string name="log_in_to_warteg">Log in To Warteg</string>
    <string name="snack_bar_undo">Item telah dihapus!</string>
    <string name="menu_add">Tambah Menu</string>
    <string name="menu_name">Nama Menu</string>
    <string name="menu_desc">Deskripsi...</string>
    <string name="menu_price">Harga...</string>
    <string name="choose_image">Choose Image</string>
    <string name="profile_owner">Profile Owner</string>
    <string name="input_review">Masukan Ulasan</string>
    <string name="person_name">Nama</string>
    <string name="review_submit">Submit</string>
    <string name="title_review">Write Your Review</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</string>
    <string name="ex_menu">Tumis Kangkung Zaman Now!</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="title_menu_warteg">Menu Tersedia</string>
    <string name="ex_warteg">Warteg Tasikmalaya</string>
    <string name="title_btn_save">Simpan Perubahan</string>
    <string name="welcome_title">Welcome</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="title_login_as_owner">Login</string>
    <string name="titile_register_your_warteg">Register your Warteg</string>
    <string name="titile_or">or</string>
    <string name="titile_logout">Logout</string>
    <string name="title_nearest_warteg">Nearest Warteg</string>
    <string name="ex_rating">5.0</string>
    <string name="title_total_rating">Total Rating</string>
    <string name="ex_100k">100K</string>
    <string name="title_total_views">Total Views</string>
    <string name="ex_50k">50K</string>
    <string name="title_total_favorite">Total Favorite</string>
    <string name="ex_variant_manu">69</string>
    <string name="title_variant_menu">Variant Menu</string>
    <string name="title_profile_warteg">Profile Warteg</string>
    <string name="warteg_name">Warteg name</string>
    <string name="warteg_email">Email</string>
    <string name="warteg_owner_name">Owner name</string>
    <string name="warteg_address">Alamat</string>
    <string name="warteg_telp">No. Telp</string>
    <string name="title_delete">Delete</string>
</resources>